--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <i class="fa-brands fa-padlet"></i>
       <a href="#">Paul Jeonghyun Chae</a>
    </div>
-   <div class="navbar__menu">
+   <!-- <div class="navbar__menu"> -->
       <ul class="navbar__menu">
          <li class="navbar__menu__item">Home</li>
          <li class="navbar__menu__item">About</li>
@@ -31,8 +31,18 @@
          <li class="navbar__menu__item">Testimonial</li>
          <li class="navbar__menu__item">Contact</li>
       </ul>
-   </div>
+   <!-- </div> -->
    
+   <!-- Home -->
+   <section id="home">
+      <img 
+      src="images/TennisPaul.png" 
+      alt="Paul`s photo" 
+      class="home__avatar">
+      <h1 class="home__title">Hello,<br> I`m coding Paul</h1>
+      <h2 class="home__description">Coding Paul in Waterloo</h2>
+      <button class="home__contact">Contact me</button>
+   </section>
    <!-- About  -->
    <section id="about"></section>
    <!-- Skills -->
