--- a/index.html
+++ b/index.html
@@ -43,8 +43,50 @@
       <h2 class="home__description">Coding Paul in Waterloo</h2>
       <button class="home__contact">Contact me</button>
    </section>
+
    <!-- About  -->
-   <section id="about"></section>
+   <section id="about">
+      <h1>About me</h1>
+      <p>I want to be a front-end developer. I have been studying for working as a front-end developer using Youtube</p>
+      <div class="about__majors">
+         <div class="major">
+            <div class="major__icon">
+               <i class="fa-brands fa-js"></i>
+            </div>
+            <div class="icon__title">JavaScript</div>
+            <div class="icon__description">qualification</div>
+         </div>
+         <div class="major">
+            <div class="major__icon">
+               <i class="fa-brands fa-css3"></i>
+               </div>
+            <div class="icon__title">CSS3</div>
+            <div class="icon__description">qualification</div>
+         </div>
+         <div class="major">
+            <div class="major__icon">
+               <i class="fa-brands fa-html5"></i>
+            </div>
+            <div class="icon__title">HTML5</div>
+            <div class="icon__description">qualification</div>
+         </div>
+      </div>
+      <div class="about__jobs">
+         <div class="job">
+            <img src="" alt="" class="job__logo">
+            <p class="job__name">Heffner</p>
+            <p class="job__period"></p>
+         </div>
+         <div class="job"></div>
+         <div class="job">
+            <img src="" alt="" class="job__logo">
+            <p class="job__name">Arking</p>
+            <p class="job__period"></p>
+         </div>
+         <div class="job"></div>
+      </div>
+      
+   </section>
    <!-- Skills -->
    <section id="skills"></section>
    <!-- Work -->
