--- a/index.html
+++ b/index.html
@@ -75,20 +75,72 @@
          <div class="job">
             <img src="" alt="" class="job__logo">
             <p class="job__name">Heffner</p>
-            <p class="job__period"></p>
+            <p class="job__period">Sep.20.2021 - May.06.2022</p>
          </div>
          <div class="job"></div>
          <div class="job">
             <img src="" alt="" class="job__logo">
             <p class="job__name">Arking</p>
-            <p class="job__period"></p>
+            <p class="job__period">Dec.18.2020 - Sep.10.2021</p>
          </div>
          <div class="job"></div>
       </div>
       
    </section>
    <!-- Skills -->
-   <section id="skills"></section>
+   <section id="skills">
+      <h1>Skills</h1>
+      <h2>Skills & Attribute</h2>
+      <p>Passion for learning new technologies. Capable of working within a team envirionment and independently. Ability to plan and time schedule, work inder strict time pressure and adapt quickly when needed.</p>
+      <div class="skillset">
+         <div class="skillset__left">
+            <h3 class="skillset__title">Skills</h3>
+            <div class="skill">
+               <div class="skill__description">
+                  <span>HTML5</span>
+                  <span>99%</span>
+               </div>
+               <div class="skill__bar">
+                  <div class="skill__value"></div>
+               </div>
+            </div>
+            <div class="skill">
+               <div class="skill__description">
+                  <span>CSS3</span>
+                  <span>90%</span>
+               </div>
+               <div class="skill__bar">
+                  <div class="skill__value"></div>
+               </div>
+            </div>
+            <div class="skill">
+               <div class="skill__description">
+                  <span>JavaScript</span>
+                  <span>85%</span>
+               </div>
+               <div class="skill__bar">
+                  <div class="skill__value"></div>
+               </div>
+            </div>
+         </div>
+         <div class="skillset__right">
+            <div class="tools"><h3 class="skillset__title">Tools</h3>
+            <ul class="tool__list">
+               <li><span>Visual Studio Code</span></li>
+               <li><span></span></li>
+               <li><span></span></li>
+               <li><span></span></li>
+               <li><span></span></li>
+            </ul></div>
+            <div class="etc"><h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+               <li><span>Github</span></li>
+               <li><span>Github Desktop</span></li>
+               <li><span></span></li>
+            </ul></div>
+         </div>
+      </div>
+   </section>
    <!-- Work -->
    <section id="work"></section>
    <!-- Testimonial -->
