--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
          <li class="navbar__menu__item">Contact</li>
       </ul>
    <!-- </div> -->
-   
    <!-- Home -->
    <section id="home">
       <img 
@@ -43,7 +42,6 @@
       <h2 class="home__description">Coding Paul in Waterloo</h2>
       <button class="home__contact">Contact me</button>
    </section>
-
    <!-- About  -->
    <section id="about">
       <h1>About me</h1>
@@ -85,7 +83,6 @@
          </div>
          <div class="job"></div>
       </div>
-      
    </section>
    <!-- Skills -->
    <section id="skills">
@@ -142,7 +139,42 @@
       </div>
    </section>
    <!-- Work -->
-   <section id="work"></section>
+   <section id="work">
+      <div class="work__projects">
+         <a href="" class="project" target="_blank">
+            <img class="project__img"
+             src="" alt="Youtube">
+            <div class="project__description">
+               <h3>Youtube Site</h3>
+               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+            </div> 
+         </a>
+         <a href="" class="project" target="_blank">
+            <img class="project__img" 
+            src="" alt="Youtube">
+            <div class="project__description">
+               <h3>Youtube Site</h3>
+               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+            </div> 
+         </a>
+         <a href="" class="project" target="_blank">
+            <img class="project__img"
+             src="" alt="Youtube">
+            <div class="project__description">
+               <h3>Youtube Site</h3>
+               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+            </div> 
+         </a>
+         <a href="" class="project" target="_blank">
+            <img class="project__img"
+            src="" alt="Youtube">
+            <div class="project__description">
+               <h3>Youtube Site</h3>
+               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+            </div> 
+         </a>
+      </div>
+   </section>
    <!-- Testimonial -->
    <section id="testimonial"></section>
    <!-- Contact -->
