--- a/index.html
+++ b/index.html
@@ -141,25 +141,25 @@
    <!-- Work -->
    <section id="work">
       <div class="work__projects">
-         <a href="" class="project" target="_blank">
+         <a href="https://github.com/PaulChaeJeonghyun/ShoppingMall.git" class="project" target="_blank">
             <img class="project__img"
-             src="" alt="Youtube">
+             src="images/ShoppingResized.png" alt="ShoppingMall">
             <div class="project__description">
-               <h3>Youtube Site</h3>
-               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+               <h3>Shopping mall</h3>
+               <span>Using with Json, JavaScript, CSS3, and HTML5</span>
             </div> 
          </a>
-         <a href="" class="project" target="_blank">
+         <a href="https://github.com/PaulChaeJeonghyun/10000-hour-Rule-.git" class="project" target="_blank">
             <img class="project__img" 
-            src="" alt="Youtube">
+            src="images/10000resized.png" alt="10000-hour-rule">
             <div class="project__description">
-               <h3>Youtube Site</h3>
-               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+               <h3>10,000-Hour-Rule</h3>
+               <span>Coding with JavaScript, CSS3, and HTML5</span>
             </div> 
          </a>
-         <a href="" class="project" target="_blank">
+         <a href="https://github.com/PaulChaeJeonghyun/Youtube.clone.git" class="project" target="_blank">
             <img class="project__img"
-             src="" alt="Youtube">
+             src="images/youtubeResized.png" alt="Youtube">
             <div class="project__description">
                <h3>Youtube Site</h3>
                <span>Clone coding with JavaScript, CSS3, and HTML5</span>
