--- a/index.html
+++ b/index.html
@@ -176,7 +176,24 @@
       </div>
    </section>
    <!-- Testimonial -->
-   <section id="testimonial"></section>
+   <section id="testimonial">
+      <h1>Testimonial</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+         <div class="testimonial">
+            <div class="testimonial__speech-bubble">
+               <p>Paul is such a professional. He has led all projects well as a team leader.</p>
+               <p class="name">Nick / Atelier Ark.ing</p>
+            </div>
+         </div>
+         <div class="testimonial">
+            <div class="testimonial__speech-bubble">
+               <p>Paul is smart and he has nice attitude to work.</p>
+               <p class="name">Richard / Heffner</p>
+            </div>
+         </div>
+      </div>
+   </section>
    <!-- Contact -->
    <section id="contact"></section>
 </body>
