--- a/index.html
+++ b/index.html
@@ -195,6 +195,14 @@
       </div>
    </section>
    <!-- Contact -->
-   <section id="contact"></section>
+   <section id="contact">
+      <h1 class="contact__title">Let`s talk</h1>
+      <h2 class="contact__email">cowjdgus@gmail.com</h2>
+      <div class="contact__links">
+         <a href="https://github.com/PaulChaeJeonghyun" target="_blank"><i class="fa-brands fa-github"></i></a>
+         <a href="https://www.linkedin.com/in/paul-chae-096a56219/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+      <p class="contact__right">2022 Coding Paul - All rights reserved</p>
+   </section>
 </body>
 </html>
