--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css" />
    <script src="main.js" defer></script>
 </head>
 <body>
    <!-- Navbar -->
-   <nav id="navbar"></nav>
-   <div class="navbar__logo">
-      <i class="fa-brands fa-padlet"></i>
-      <a href="#">Paul Jeonghyun Chae</a>
-   </div>
-   <!-- <div class="navbar__menu"> -->
-      <ul class="navbar__menu">
-         <li class="navbar__menu__item">Home</li>
-         <li class="navbar__menu__item">About</li>
-         <li class="navbar__menu__item">Skills</li>
-         <li class="navbar__menu__item">My work</li>
-         <li class="navbar__menu__item">Testimonial</li>
-         <li class="navbar__menu__item">Contact</li>
-      </ul>
-   <!-- </div> -->
+   <nav id="navbar">
+      <div class="navbar__logo">
+         <i class="fa-brands fa-padlet"></i>
+         <a href="#">Paul Jeonghyun Chae</a>
+      </div>
+      <div class="navbar__menu">
+         <ul class="navbar__menu">
+            <li class="navbar__menu__item active">Home</li>
+            <li class="navbar__menu__item">About</li>
+            <li class="navbar__menu__item">Skills</li>
+            <li class="navbar__menu__item">My work</li>
+            <li class="navbar__menu__item">Testimonial</li>
+            <li class="navbar__menu__item">Contact</li>
+         </ul>
+      </div>
+   </nav>
    <!-- Home -->
    <section id="home">
       <img 
