--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
          </div>
          <div class="testimonial">
             <div class="testimonial__speech-bubble">
-               <p>Paul is smart and he has nice attitude to work.</p>
+               <p>Paul is smart and has nice attitude to work. No doubt.</p>
                <p class="name">Richard / Heffner</p>
             </div>
          </div>
