--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button class="home__contact">Contact me</button>
    </section>
    <!-- About  -->
-   <section id="about">
+   <section id="about" class="section">
       <h1>About me</h1>
       <p>I want to be a front-end developer. I have been studying for working as a front-end developer using Youtube</p>
       <div class="about__majors">
@@ -52,41 +52,41 @@
             <div class="major__icon">
                <i class="fa-brands fa-js"></i>
             </div>
-            <div class="icon__title">JavaScript</div>
-            <div class="icon__description">qualification</div>
+            <h2 class="major__title">JavaScript</h2>
+            <div class="major__description">qualification</div>
          </div>
          <div class="major">
             <div class="major__icon">
                <i class="fa-brands fa-css3"></i>
                </div>
-            <div class="icon__title">CSS3</div>
-            <div class="icon__description">qualification</div>
+            <h2 class="major__title">CSS3</h2>
+            <div class="major__description">qualification</div>
          </div>
          <div class="major">
             <div class="major__icon">
                <i class="fa-brands fa-html5"></i>
             </div>
-            <div class="icon__title">HTML5</div>
-            <div class="icon__description">qualification</div>
+            <h2 class="major__title">HTML5</h2>
+            <div class="major__description">qualification</div>
          </div>
       </div>
       <div class="about__jobs">
          <div class="job">
             <img src="" alt="" class="job__logo">
-            <p class="job__name">Heffner</p>
-            <p class="job__period">Sep.20.2021 - May.06.2022</p>
+            <div class="job__description"><p class="job__name">Heffner</p>
+               <p class="job__period">Sep.20.2021 - May.06.2022</p></div>
          </div>
-         <div class="job"></div>
+         <!-- <div class="job"></div> -->
          <div class="job">
             <img src="" alt="" class="job__logo">
-            <p class="job__name">Arking</p>
-            <p class="job__period">Dec.18.2020 - Sep.10.2021</p>
+            <div class="job__description"><p class="job__name">Ark.ing</p>
+               <p class="job__period">Dec.18.2020 - Sep.10.2021</p></div>
          </div>
          <div class="job"></div>
       </div>
    </section>
    <!-- Skills -->
-   <section id="skills">
+   <section id="skills" class="section">
       <h1>Skills</h1>
       <h2>Skills & Attribute</h2>
       <p>Passion for learning new technologies. Capable of working within a team envirionment and independently. Ability to plan and time schedule, work inder strict time pressure and adapt quickly when needed.</p>
@@ -140,7 +140,7 @@
       </div>
    </section>
    <!-- Work -->
-   <section id="work">
+   <section id="work" class="section">
       <div class="work__projects">
          <a href="https://github.com/PaulChaeJeonghyun/ShoppingMall.git" class="project" target="_blank">
             <img class="project__img"
@@ -177,7 +177,7 @@
       </div>
    </section>
    <!-- Testimonial -->
-   <section id="testimonial">
+   <section id="testimonial" class="section">
       <h1>Testimonial</h1>
       <h3>See what they say about me</h3>
       <div class="testimonials">
@@ -196,7 +196,7 @@
       </div>
    </section>
    <!-- Contact -->
-   <section id="contact">
+   <section id="contact" class="section">
       <h1 class="contact__title">Let`s talk</h1>
       <h2 class="contact__email">cowjdgus@gmail.com</h2>
       <div class="contact__links">
