--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button class="home__contact">Contact me</button>
    </section>
    <!-- About  -->
-   <section id="about" class="section">
+   <section id="about" class="section section__container">
       <h1>About me</h1>
       <p>I want to be a front-end developer. I have been studying for working as a front-end developer using Youtube</p>
       <div class="about__majors">
@@ -87,6 +87,7 @@
    </section>
    <!-- Skills -->
    <section id="skills" class="section">
+      <div class="section__container">
       <h1>Skills</h1>
       <h2>Skills & Attribute</h2>
       <p>Passion for learning new technologies. Capable of working within a team envirionment and independently. Ability to plan and time schedule, work inder strict time pressure and adapt quickly when needed.</p>
@@ -137,6 +138,7 @@
                <li><span></span></li>
             </ul></div>
          </div>
+      </div>
       </div>
    </section>
    <!-- Work -->
