--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       src="images/TennisPaul.png" 
       alt="Paul`s photo" 
       class="home__avatar">
-      <h1 class="home__title">Hello,<br> I`m coding Paul</h1>
+      <h1 class="home__title">Hello world,<br> Paul is coding. </h1>
       <h2 class="home__description">Coding Paul in Waterloo</h2>
       <button class="home__contact">Contact me</button>
    </section>
@@ -100,7 +100,7 @@
                   <span>99%</span>
                </div>
                <div class="skill__bar">
-                  <div class="skill__value"></div>
+                  <div class="skill__value" style="width: 99%"></div>
                </div>
             </div>
             <div class="skill">
@@ -109,7 +109,7 @@
                   <span>90%</span>
                </div>
                <div class="skill__bar">
-                  <div class="skill__value"></div>
+                  <div class="skill__value"style="width: 90%"></div>
                </div>
             </div>
             <div class="skill">
@@ -118,7 +118,34 @@
                   <span>85%</span>
                </div>
                <div class="skill__bar">
-                  <div class="skill__value"></div>
+                  <div class="skill__value"style="width: 85%"></div>
+               </div>
+            </div>
+            <div class="skill">
+               <div class="skill__description">
+                  <span>React</span>
+                  <span>75%</span>
+               </div>
+               <div class="skill__bar">
+                  <div class="skill__value"style="width: 75%"></div>
+               </div>
+            </div>
+            <div class="skill">
+               <div class="skill__description">
+                  <span>Vue.js</span>
+                  <span>70%</span>
+               </div>
+               <div class="skill__bar">
+                  <div class="skill__value"style="width: 70%"></div>
+               </div>
+            </div>  
+            <div class="skill">
+               <div class="skill__description">
+                  <span>Node.js</span>
+                  <span>60%</span>
+               </div>
+               <div class="skill__bar">
+                  <div class="skill__value"style="width: 60%"></div>
                </div>
             </div>
          </div>
@@ -130,7 +157,7 @@
                <li><span></span></li>
                <li><span></span></li>
                <li><span></span></li>
-            </ul></div>
+            </div>
             <div class="etc"><h3 class="skillset__title">Etc</h3>
             <ul class="etc__list">
                <li><span>Github</span></li>
