--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
    </section>
    <!-- Work -->
    <section id="work" class="section">
+      <h1>My work</h1>
+      <h3>Projects</h3>
       <div class="work__projects">
          <a href="https://github.com/PaulChaeJeonghyun/ShoppingMall.git" class="project" target="_blank">
             <img class="project__img"
