--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
          </a>
          <a href="" class="project" target="_blank">
             <img class="project__img"
-            src="" alt="Youtube">
+            src="images/res.3.png" alt="Responsive">
             <div class="project__description">
-               <h3>Youtube Site</h3>
-               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+               <h3>Responsive Navbar</h3>
+               <span>Responsive Header and Navbar with toggle button</span>
             </div> 
          </a>
       </div>
