--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
       <div class="testimonials">
          <div class="testimonial">
             <div class="testimonial__speech-bubble">
-               <p>Paul is such a professional. He has led all projects well as a team leader.</p>
-               <p class="name">Nick / Atelier Ark.ing</p>
+               <p>Paul is smart and has nice attitude to work. No doubt!</p>
+               <p class="name">Richard 548-***-****/ Heffner</p>
             </div>
          </div>
          <div class="testimonial">
             <div class="testimonial__speech-bubble">
-               <p>Paul is smart and has nice attitude to work. No doubt.</p>
-               <p class="name">Richard / Heffner</p>
+               <p>Paul is such a professional. He has led all projects well as a team leader.</p>
+               <p class="name">Nick 647-***-****/ Atelier Ark.ing</p>
             </div>
          </div>
       </div>
