--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
    </section>
    <!-- Work -->
    <section id="work" class="section">
+   <div class="section__container">
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__projects">
@@ -206,10 +207,11 @@
             </div> 
          </a>
       </div>
+   </div>
    </section>
    <!-- Testimonial -->
    <section id="testimonial" class="section">
-      <h1>Testimonial</h1>
+   <div class="section__container"><h1>Testimonial</h1>
       <h3>See what they say about me</h3>
       <div class="testimonials">
          <div class="testimonial">
@@ -225,6 +227,7 @@
             </div>
          </div>
       </div>
+   </div>
    </section>
    <!-- Contact -->
    <section id="contact" class="section">
