--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             <div class="tools"><h3 class="skillset__title">Tools</h3>
             <ul class="tool__list">
                <li><span>Visual Studio Code</span></li>
+               <li><span>Bootstrap</span></li>
+               <!-- <li><span></span></li>
                <li><span></span></li>
-               <li><span></span></li>
-               <li><span></span></li>
-               <li><span></span></li>
+               <li><span></span></li> -->
             </div>
             <div class="etc"><h3 class="skillset__title">Etc</h3>
             <ul class="etc__list">
