JS & HTML:transparent

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
    </nav>
    <!-- Home -->
    <section id="home">
-      <img 
+      <div class="home__container">
+         <img 
       src="images/TennisPaul.png" 
       alt="Paul`s photo" 
       class="home__avatar">
       <h1 class="home__title">Hello world,<br> Paul is coding. </h1>
       <h2 class="home__description">Coding Paul in Waterloo</h2>
       <button class="home__contact">Contact me</button>
+      </div>
    </section>
    <!-- About  -->
    <section id="about" class="section section__container">
