--- a/index.html
+++ b/index.html
@@ -245,5 +245,9 @@
       </div>
       <p class="contact__right">2022 Coding Paul - All rights reserved</p>
    </section>
+   <!-- Arrow up -->
+   <button class="arrow__up">
+      <i class="fa-solid fa-arrow-up"></i>
+   </button>
 </body>
 </html>
