--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
    <nav id="navbar">
       <div class="navbar__logo">
          <i class="fa-brands fa-padlet"></i>
-         <a href="#">Paul Jeonghyun Chae</a>
+         <a href="#">Paul J. Chae</a>
       </div>
-      <div class="navbar__menu">
          <ul class="navbar__menu">
             <li class="navbar__menu__item" data-link="#home">Home</li>
             <li class="navbar__menu__item" data-link="#about">About</li>
@@ -31,8 +30,8 @@
             <li class="navbar__menu__item" data-link="#testimonial">Testimonial</li>
             <li class="navbar__menu__item" data-link="#contact">Contact</li>
          </ul>
-      </div>
-      <!-- Toggle Button -->
+      
+         <!-- Toggle Button -->
       <button class="navbar__toggle-btn">
          <i class="fa-solid fa-bars"></i>
       </button>
