--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    <!-- About  -->
    <section id="about" class="section section__container">
       <h1>About me</h1>
-      <p>I want to be a front-end developer. I have been studying for working as a front-end developer using Youtube</p>
+      <p>I have been studying for working as a front-end developer.</p>
       <div class="about__majors">
          <div class="major">
             <div class="major__icon">
@@ -185,7 +185,7 @@
              src="images/ShoppingResized.png" alt="ShoppingMall">
             <div class="project__description">
                <h3>Shopping mall</h3>
-               <span>Using with Json, JavaScript, CSS3, and HTML5</span>
+               <span>Coding with Json, JavaScript, CSS3, and HTML5</span>
             </div> 
          </a>
          <a href="https://github.com/PaulChaeJeonghyun/10000-hour-Rule-.git" class="project" target="_blank">
@@ -193,7 +193,7 @@
             src="images/10000resized.png" alt="10000-hour-rule">
             <div class="project__description">
                <h3>10,000-Hour-Rule</h3>
-               <span>Coding with JavaScript, CSS3, and HTML5</span>
+               <span>Calculating for 10,000 hours / JavaScript, CSS3, and HTML5</span>
             </div> 
          </a>
          <a href="https://github.com/PaulChaeJeonghyun/Youtube.clone.git" class="project" target="_blank">
@@ -201,7 +201,7 @@
              src="images/youtubeResized.png" alt="Youtube">
             <div class="project__description">
                <h3>Youtube Site</h3>
-               <span>Clone coding with JavaScript, CSS3, and HTML5</span>
+               <span>Clone coding</span>
             </div> 
          </a>
          <a href="" class="project" target="_blank">
