--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <title>Paul`s Portfolio</title>
    <meta name="description" content="Portfolio for Paul`s bright future">
    <meta name="author" content="Paul">
-   <link rel="icon" type="image/png" href="images/favicon.png">
+   <link rel="icon" type="image/png" href="images/favicon2.png">
    <script src="https://kit.fontawesome.com/42b07525f6.js" crossorigin="anonymous"></script>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,8 @@
    <!-- Navbar -->
    <nav id="navbar">
       <div class="navbar__logo">
-         <i class="fa-brands fa-padlet"></i>
+         <i class="fa-solid fa-star"></i>
+         <!-- <i class="fa-brands fa-padlet"></i> -->
          <a href="#">Paul J. Chae</a>
       </div>
          <ul class="navbar__menu">
@@ -58,22 +59,22 @@
             <div class="major__icon">
                <i class="fa-brands fa-js"></i>
             </div>
-            <h2 class="major__title">JavaScript</h2>
-            <div class="major__description">qualification</div>
+            <h2 class="major__title">JavaScript(ES6)</h2>
+            <!-- <div class="major__description">qualification</div> -->
          </div>
          <div class="major">
             <div class="major__icon">
                <i class="fa-brands fa-css3"></i>
                </div>
             <h2 class="major__title">CSS3</h2>
-            <div class="major__description">qualification</div>
+            <!-- <div class="major__description">qualification</div> -->
          </div>
          <div class="major">
             <div class="major__icon">
                <i class="fa-brands fa-html5"></i>
             </div>
             <h2 class="major__title">HTML5</h2>
-            <div class="major__description">qualification</div>
+            <!-- <div class="major__description">qualification</div> -->
          </div>
       </div>
       <div class="about__jobs">
@@ -145,7 +146,7 @@
                   <div class="skill__value"style="width: 70%"></div>
                </div>
             </div>  
-            <div class="skill">
+            <!-- <div class="skill">
                <div class="skill__description">
                   <span>Node.js</span>
                   <span>60%</span>
@@ -153,7 +154,7 @@
                <div class="skill__bar">
                   <div class="skill__value"style="width: 60%"></div>
                </div>
-            </div>
+            </div> -->
          </div>
          <div class="skillset__right">
             <div class="tools"><h3 class="skillset__title">Tools</h3>
@@ -193,7 +194,7 @@
             src="images/10000resized.png" alt="10000-hour-rule">
             <div class="project__description">
                <h3>10,000-Hour-Rule</h3>
-               <span>Calculating for 10,000 hours / JavaScript, CSS3, and HTML5</span>
+               <span>Calculating 10,000 hours / JavaScript, CSS3, and HTML5</span>
             </div> 
          </a>
          <a href="https://github.com/PaulChaeJeonghyun/Youtube.clone.git" class="project" target="_blank">
@@ -204,7 +205,7 @@
                <span>Clone coding</span>
             </div> 
          </a>
-         <a href="" class="project" target="_blank">
+         <a href="https://github.com/PaulChaeJeonghyun/Responsive-.git" class="project" target="_blank">
             <img class="project__img"
             src="images/res.3.png" alt="Responsive">
             <div class="project__description">
